[workspace]
members = ["client", "server", "common"]
resolver = "3"

[workspace.package]
version = "0.2.0"
authors = ["Ron Manosuthi <rman401@proton.me>"]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
crossbeam = "0.8.4"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
mysql = { version = "26.0.1", features = ["chrono"] }
warp = { version = "0.4.2", features = ["server"] }
openssl = { version = "0.10.75" }
hex = { version = "0.4.3" }
rand = "0.9.2"
