[package]
name = "common"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
mysql = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tungstenite = { workspace = true, optional = true }

[features]
server = ["dep:mysql"]
client = ["dep:openssl", "dep:hex", "dep:log", "dep:tungstenite"]
